--- a/openhab.cfg
+++ b/openhab.cfg
@@ -1,3 +1,8 @@
+
+################################ OpenHAB Config  ######################################
+#
+security:option=ON
+
 ################################ Z-Wave  Binding ######################################
 #
 # The Z-Wave controller port. Valid values are e.g. COM1 for Windows and /dev/ttyS0 or
