removed oh securoty, replaced with nginx basic auth

--- a/openhab.cfg
+++ b/openhab.cfg
@@ -1,7 +1,7 @@
 
 ################################ OpenHAB Config  ######################################
 #
-security:option=ON
+#security:option=ON
 
 ################################ Z-Wave  Binding ######################################
 #
