updates to presence

--- a/openhab.cfg
+++ b/openhab.cfg
@@ -34,7 +34,7 @@ zwave:healtime=2
 #
 
 # URL to the MQTT broker, e.g. tcp://localhost:1883 or ssl://localhost:8883
-mqtt:mosquitto.url=ssl://localhost:8883
+mqtt:mosquitto.url=ssl://localhost:1883
 
 # Optional. Client id (max 23 chars) to use when connecting to the broker.
 # If not provided a default one is generated.
@@ -61,7 +61,7 @@ mqtt:mosquitto.pwd=@@MQTT_PWD@@
 
 # Optional. Defines the last will and testament that is sent when this client goes offline
 # Format: topic:message:qos:retained <br/>
-mqtt:mosquitto.lwt=iopenhab_binding signing out
+#mqtt:mosquitto.lwt=openhab_binding signing out
 
 
 ################################# MQTT Persistence #########################################
