fixing mosquitto config, fix logging

--- a/openhab.cfg
+++ b/openhab.cfg
@@ -34,7 +34,7 @@ zwave:healtime=2
 #
 
 # URL to the MQTT broker, e.g. tcp://localhost:1883 or ssl://localhost:8883
-mqtt:mosquitto.url=ssl://localhost:1883
+mqtt:mosquitto.url=tcp://localhost:1883
 
 # Optional. Client id (max 23 chars) to use when connecting to the broker.
 # If not provided a default one is generated.
