--- a/openhab.cfg
+++ b/openhab.cfg
@@ -122,19 +122,19 @@ hue:refresh=60000
 ######################## XBMC Binding ###########################
 
 # Hostname / IP address of your XBMC host
-xbmc:livingRoom.host=@@XBMC_HOST@@
+xbmc:living.host=@@XBMC_HOST@@
 
 # Port number for the json rpc service (optional, defaults to 8080)
-xbmc:livingRoom.rsPort=8080
+xbmc:living.rsPort=8080
 
 # Port number for the web socket service (optional, defaults to 9090)
-xbmc:livingRoom.wsPort=9090
+xbmc:living.wsPort=9090
 
 # Username to connect to XBMC. (optional, defaults to none)
-xbmc:livingRoom.username=@@XBMC_USERNAME@@
+xbmc:living.username=@@XBMC_USERNAME@@
 
 # Password to connect to XBMC. (optional, defaults to none)
-xbmc:livingRoom.password=@@XBMC_PASSWORD@@
+xbmc:living.password=@@XBMC_PASSWORD@@
 
 
 ################################ RFXCOM Binding #######################################
