changed dir structure + updated deploy script

--- a/configurations/openhab.cfg
+++ b/configurations/openhab.cfg
@@ -151,9 +151,8 @@ xbmc:living.password=@@XBMC_PASSWORD@@
 ################################ Sonos Binding ########################################
 #
 # Host and port of the first VDR to control 
-#sonos:office.udn=RINCON_000XXXXXXXXX01400
-#sonos:living.udn=RINCON_000YYYYYYYYY01400
-#sonos:pollingPeriod=2000
+sonos:living.udn=@@SONOS_LIVING_UDN@@
+sonos:pollingPeriod=2000
 
 
 
