--- a/configurations/addons.cfg
+++ b/configurations/addons.cfg
@@ -2,6 +2,7 @@ org.openhab.binding.http-1.6.1.jar
 org.openhab.binding.hue-1.6.1.jar
 org.openhab.binding.ntp-1.6.1.jar
 org.openhab.binding.xbmc-1.6.1.jar
+org.openhab.binding.sonos-1.6.1.jar
 org.openhab.binding.zwave-1.7.0-SNAPSHOT.jar
 org.openhab.io.habmin-1.6.0-SNAPSHOT.jar
 org.openhab.persistence.exec-1.6.1.jar
