--- a/configurations/openhab.cfg
+++ b/configurations/openhab.cfg
@@ -11,7 +11,7 @@
 #
 # The Z-Wave controller port. Valid values are e.g. COM1 for Windows and /dev/ttyS0 or
 # /dev/ttyUSB0 for Linux
-zwave:port=/dev/ttyUSB0
+zwave:port=@@ZWAVE_PORT@@
 
 # Z-Wave binding refresh value (optional, defaults to 10000)
 #zwave:refresh=
@@ -34,11 +34,11 @@ zwave:healtime=2
 #
 
 # URL to the MQTT broker, e.g. tcp://localhost:1883 or ssl://localhost:8883
-mqtt:mosquitto.url=ssl://localhost:8883
+mqtt:mosquitto.url=@@MQTT_URL@@
 
 # Optional. Client id (max 23 chars) to use when connecting to the broker.
 # If not provided a default one is generated.
-mqtt:mosquitto.clientId=openhab_binding
+mqtt:mosquitto.clientId=@@MQTT_CLIENTID@@
 
 # Optional. User id to authenticate with the broker.
 mqtt:mosquitto.user=@@MQTT_USER@@
