updates to make mqtt/mqttitude work again

--- a/configurations/openhab.cfg
+++ b/configurations/openhab.cfg
@@ -61,7 +61,7 @@ mqtt:mosquitto.pwd=@@MQTT_PWD@@
 
 # Optional. Defines the last will and testament that is sent when this client goes offline
 # Format: topic:message:qos:retained <br/>
-mqtt:mosquitto.lwt=iopenhab_binding signing out
+#mqtt:mosquitto.lwt=iopenhab_binding signing out
 
 
 ################################# MQTT Persistence #########################################
