adding all in/outcoming events to mqtt

--- a/configurations/openhab.cfg
+++ b/configurations/openhab.cfg
@@ -63,6 +63,10 @@ mqtt:mosquitto.pwd=@@MQTT_PWD@@
 # Format: topic:message:qos:retained <br/>
 #mqtt:mosquitto.lwt=iopenhab_binding signing out
 
+mqtt-eventbus:broker=mosquitto
+mqtt-eventbus:commandPublishTopic=/openHAB/out/${item}/command
+mqtt-eventbus:stateSubscribeTopic=/openHAB/in/${item}/state
+
 
 ################################# MQTT Persistence #########################################
 #
