--- a/configurations/addons.cfg
+++ b/configurations/addons.cfg
@@ -1,9 +1,7 @@
-org.openhab.binding.http-1.6.2.jar
-org.openhab.binding.ntp-1.6.2.jar
-org.openhab.binding.mqtt-1.6.2.jar
-org.openhab.binding.mqttitude-1.6.2.jar
+org.openhab.binding.http-@@OH_VERSION@@.jar
+org.openhab.binding.ntp-@@OH_VERSION@@.jar
 org.openhab.binding.zwave-1.7.0-SNAPSHOT.jar
 org.openhab.io.habmin-1.7.0-SNAPSHOT.jar
-org.openhab.persistence.exec-1.6.2.jar
-org.openhab.persistence.logging-1.6.2.jar
-org.openhab.persistence.rrd4j-1.6.2.jar
+org.openhab.persistence.exec-@@OH_VERSION@@.jar
+org.openhab.persistence.logging-@@OH_VERSION@@.jar
+org.openhab.persistence.rrd4j-@@OH_VERSION@@.jar
