--- a/configurations/addons.cfg
+++ b/configurations/addons.cfg
@@ -1,7 +1,9 @@
 org.openhab.binding.http-@@OH_VERSION@@.jar
 org.openhab.binding.ntp-@@OH_VERSION@@.jar
+org.openhab.binding.networkhealth-@@OH_VERSION@@.jar
 org.openhab.binding.zwave-1.7.0-SNAPSHOT.jar
 org.openhab.io.habmin-1.7.0-SNAPSHOT.jar
 org.openhab.persistence.exec-@@OH_VERSION@@.jar
 org.openhab.persistence.logging-@@OH_VERSION@@.jar
 org.openhab.persistence.rrd4j-@@OH_VERSION@@.jar
+org.openhab.persistence.db4o-@@OH_VERSION@@.jar
