fixing mqtt addons, adding humidex

--- a/configurations/addons.cfg
+++ b/configurations/addons.cfg
@@ -1,6 +1,8 @@
 org.openhab.binding.http-@@OH_VERSION@@.jar
 org.openhab.binding.ntp-@@OH_VERSION@@.jar
 org.openhab.binding.networkhealth-@@OH_VERSION@@.jar
+org.openhab.binding.mqtt-@@OH_VERSION@@.jar
+org.openhab.binding.mqttitude-@@OH_VERSION@@.jar
 org.openhab.binding.zwave-1.7.0-SNAPSHOT.jar
 org.openhab.io.habmin-1.7.0-SNAPSHOT.jar
 org.openhab.persistence.exec-@@OH_VERSION@@.jar
