--- a/configurations/openhab.cfg
+++ b/configurations/openhab.cfg
@@ -79,3 +79,11 @@ mqtt-eventbus:stateSubscribeTopic=/openHAB/in/${item}/state
 # A string representing the persistence message content.
 # mqtt-persistence:message=
 
+
+################################ NTP Binding ##########################################
+#
+# refresh interval in milliseconds (optional, defaults to 900000 [15 minutes])
+#ntp:refresh=
+
+# the hostname of the timeserver
+ntp:hostname=0.europe.pool.ntp.org
